      onion key, then re-set our clock to be correct, we should not stop
      the onion key from getting rotated.
    - Clean up torrc sample config file.

  o Minor bugfixes (on 0.2.0.x):
    - Fix a bug with AutomapHostsOnResolve that would always cause
      the second request to fail. Bug reported by Kate. Bugfix on
      0.2.0.3-alpha.
    - Read v3 directory authority keys from the right location.
    - Numerous bugfixes to directory voting code.


Changes in version 0.2.0.4-alpha - 2007-08-01
  o Major security fixes:
    - Close immediately after missing authentication on control port;
      do not allow multiple authentication attempts.

  o Major bugfixes (compilation):
    - Fix win32 compilation: apparently IN_ADDR and IN6_ADDR are already
      defined there.

  o Minor features (performance):
    - Be even more aggressive about releasing RAM from small
      empty buffers. Thanks to our free-list code, this shouldn't be too
      performance-intensive.
    - Disable sentinel-based debugging for buffer code: we squashed all
      the bugs that this was supposed to detect a long time ago, and
      now its only effect is to change our buffer sizes from nice
      powers of two (which platform mallocs tend to like) to values
      siightly over powers of two (which make some platform mallocs sad).
    - Log malloc statistics from mallinfo() on platforms where it
      exists.


Changes in version 0.2.0.3-alpha - 2007-07-29
  o Major features:
    - The first pieces of our "bridge" design for blocking-resistance
      are implemented. People can run bridge directory authorities;
      people can run bridges; and people can configure their Tor clients
      with a set of bridges to use as the first hop into the Tor network.
      See http://archives.seul.org/or/talk/Jul-2007/msg00249.html for
      details.
    - Create listener connections before we setuid to the configured
      User and Group. Now non-Windows users can choose port values