@@ -762,7 +762,7 @@ $Id$
     PIVERSION: 1*DIGIT
 
   Tor MAY give its InfoLines in any order; controllers MUST ignore InfoLines
-  with keywords it does not recognize.  Controllers MUST ignore extraneous
+  with keywords they do not recognize.  Controllers MUST ignore extraneous
   data on any InfoLine.
 
   PIVERSION is there in case we drastically change the syntax one day. For
@@ -1044,10 +1044,14 @@ $Id$
 4.1.7. New Address mapping
 
   Syntax:
-     "650" SP "ADDRMAP" SP Address SP Address SP Expiry SP Error SP GMTExpiry
+     "650" SP "ADDRMAP" SP Address SP NewAddress SP Expiry
+       [SP Error] SP GMTExpiry CRLF
+
+     NewAddress = Address / "<error>"
      Expiry = DQUOTE ISOTime DQUOTE / "NEVER"
 
-     Error = / "error=" ErrorCode
+     Error = "error=" ErrorCode
+     ErrorCode = XXXX
      GMTExpiry = "EXPIRES=" DQUOTE IsoTime DQUOTE
 
   Error and GMTExpiry are only provided if extended events are enabled.
